# iaos-CTD-extract-from-opendap

./: ExtractorNotebook.ipynb  README.md  setup.cfg  setup.py
.ipynb_checkpoints/: ExtractorNotebook-checkpoint.ipynb  environment-checkpoint.yml  setup-checkpoint.cfg
export_from_Notebook/: TESTexport_BBOX=-20.40.50.85_timerange=20050101-20050131_d=25m_vars=PSAL.csv  export_BBOX=-20.40.50.85_timerange=20031201-20031231_d=25m_var=TEMP.nc.nc4  export_BBOX=-20.40.50.85_timerange=20031201-20031231_d=25m_vars=PSAL.csv  export_BBOX=-20.40.50.85_timerange=20031201-20031231_d=25m_vars=PSAL.nc.nc4  export_BBOX=-20.40.50.85_timerange=20031201-20031231_d=25m_vars=TEMP-PRES-PSAL-CNDC.csv  export_BBOX=-20.40.50.85_timerange=20031201-20031231_d=25m_vars=TEMP-PRES-PSAL-CNDC.nc.nc4  export_BBOX=-20.40.50.85_timerange=20031201-20031231_d=25m_vars=TEMP-PRES.csv  export_BBOX=-20.40.50.85_timerange=20031201-20031231_d=25m_vars=TEMP-PRES.nc.nc4  export_BBOX=-20.40.50.85_timerange=20031201-20040131_d=25m_vars=TEMP-PRES-PSAL-CNDC.nc.nc4  export_BBOX=-20.40.50.85_timerange=20031201-20040131_d=25m_vars=TEMP-PRES.csv  export_BBOX=-20.40.50.85_timerange=20031201-20040131_d=25m_vars=TEMP-PRES.nc.nc4  export_BBOX=-20.40.50.85_timerange=20031201-20050131_d=25m_var=TEMP.csv  export_BBOX=-20.40.50.85_timerange=20031201-20050131_d=25m_var=TEMP.nc.nc4  export_BBOX=-20.40.50.85_timerange=20031201-20050131_d=25m_vars=TEMP-PRES-PSAL-CNDC.csv  export_BBOX=-20.40.50.85_timerange=20031201-20050131_d=25m_vars=TEMP-PRES-PSAL-CNDC.nc.nc4  export_BBOX=-20.40.50.85_timerange=20050101-20050131_d=25m_vars=PSAL.csv  (+2 more)
(+48 files in other folders)
