[metadata]
name = extractor-tool
version = 0.0.1
description = Extractor Tool
long_description = This service performs: i) extraction of NetCDF data from a remote OPeNDAP server; ii) data filtering by bounding box, time and depth; and iii) output data export to CSV and/or NetCDF file.
keywords = keyword_1, keyword_2
license = Apache License, Version 2.0
